--- a/model/ml/operational-semantics/scheme.tex
+++ b/model/ml/operational-semantics/scheme.tex
@@ -45,7 +45,7 @@ $(\varvalfs \neq \expnum{\varnum})$ \\
 
 \redrulem
 {\expms{(\csbrand{\varbrand}{\vartym})}{\varvalfs}}
-{\expwrongs{\tyunbrand{\csbrand{\varbrand}{\vartym}}}{\str{Parametricity \; violated}}} \\
+{\expwrongs{\tyunbrand{\csbrand{\varbrand}{\vartym}}}{\str{Brand \; mismatch}}} \\
 
 \redsp $(\varvalfs \neq \expsm{(\csbrand{\varbrand}{\vartym})}{\varexpm})$ \\
 
