--- a/proof/lemmas/progress/inversion.tex
+++ b/proof/lemmas/progress/inversion.tex
@@ -2,7 +2,7 @@
 
 \label{leminv}
 
-The syntactic forms of well-typed expressions determine the types of their subexpressions.
+The syntactic forms of well-typed expressions determine the types of their subexpressions.  ML cases are omitted because they mirror those of Haskell.  Straightforward Scheme cases are omitted; well-typed Scheme expressions and subexpressions have the type \tytst.
 
 \begin{enumerate}
 
@@ -54,53 +54,45 @@ The syntactic forms of well-typed expressions determine the types of their subex
 
 % o e e
 
-\item If $\Gamma\vdash_{A}o$ $e_{A}^{1}$ $e_{A}^{2}:T$ then $T=N$, $\Gamma\vdash_{A}e_{A}^{1}:N$, and $\Gamma\vdash_{A}e_{A}^{2}:N$ where $A\in\lbrace H,M\rbrace$.
-
-\item If \judeh{\env}{\expop{\first{\varexph}}{\second{\varexph}}}{ % TODO
+\item If \judeh{\env}{\expop{\first{\varexph}}{\second{\varexph}}}{\first{\vartyh}} then $\first{\vartyh} = \tynum$, \judeh{\env}{\first{\varexph}}{\tynum}, and \judeh{\env}{\second{\varexph}}{\tynum}.
 
 % null? e
 
-\item If $\Gamma\vdash_{A}\mathtt{null?}$ $e_{A}:T$ then $T=N$ and $\Gamma\vdash_{A}e_{A}:[T_{1}]$ where $A\in\lbrace H,M\rbrace$.
+\item If \judeh{\env}{\exppnull{\varexph}}{\first{\vartyh}} then $\first{\vartyh} = \tynum$ and \judeh{\env}{\varexph}{\tylist{\second{\vartyh}}}.
 
 % if0 e e e
 
-\item If $\Gamma\vdash_{A}\mathtt{if0}$ $e_{A}^{1}$ $e_{A}^{2}$ $e_{A}^{3}:T$ then $T=T_{1}$, $\Gamma\vdash_{A}e_{A}^{1}:N$, $\Gamma\vdash_{A}e_{A}^{2}:T_{1}$, and $\Gamma\vdash_{A}e_{A}^{3}:T_{1}$ where $A\in\lbrace H,M\rbrace$.
+\item If \judeh{\env}{\expif{\first{\varexph}}{\second{\varexph}}{\third{\varexph}}}{\vartyh} then \judeh{\env}{\first{\varexph}}{\tynum}, \judeh{\env}{\second{\varexph}}{\vartyh}, \judeh{\env}{\third{\varexph}}{\vartyh}.
 
 % wrong t string
 
-\item If $\Gamma\vdash_{A}\mathtt{wrong}^{T_{1}}$ $\mathrm{string}:T$ then $T=T_{1}$ where $A\in\lbrace H,M\rbrace$.
+\item If \judeh{\env}{\expwrongs{\first{\vartyh}}{\formvar{string}}}{\second{\vartyh}} then $\second{\vartyh} = \first{\vartyh}$.
 
-\item If $\Gamma\vdash_{A}{^{T_{1}}A}B^{T_{1}}$ $e_{B}:T$ then $T=T_{1}$, $\Gamma\vdash_{A}T_{1}$, $\Gamma\vdash_{B}T_{1}$, and $\Gamma\vdash_{B}e_{B}:T_{1}$ where $(A,B)\in\lbrace(H,M),(M,H)\rbrace$.
+% hm t t e
 
-\item If $\Gamma\vdash_{A}{^{T_{1}}A}S$ $e_{S}:T$ then $T=T_{1}[T_{i}/T_{i}^{a}]$, $\Gamma\vdash_{A}T_{1}$, and $\Gamma\vdash_{S}e_{S}:TST$ where $A\in\lbrace H,M\rbrace$.
+\item If \judeh{\env}{\exphm{\first{\vartyh}}{\first{\vartym}}{\varexpm}}{\second{\vartyh}}, $\first{\vartyh} = \first{\vartym}$, and $\first{\vartyh} \neq \tylump$ then $\second{\vartyh} = \first{\vartyh}$, \judth{\env}{\first{\vartyh}}, \judtm{\env}{\first{\vartym}}, \judem{\env}{\varexpm}{\second{\vartym}}, and $\first{\vartym} = \second{\vartym}$.
 
-% ML
+% hm L t e
+
+\item If \judeh{\env}{\exphm{\tylump}{\first{\vartym}}{\varexpm}}{\tylump} and $\first{\vartym} \neq \tylump$ then \judtm{\env}{\first{\vartym}}, \judem{\env}{\varexpm}{\second{\vartym}}, and $\first{\vartym} = \second{\vartym}$.
+
+% hm t L e
+
+\item If \judeh{\env}{\exphm{\first{\vartyh}}{\tylump}{\varexpm}}{\second{\vartyh}} and $\first{\vartyh} \neq \tylump$ then \judth{\env}{\vartyh} and \judem{\env}{\varexpm}{\tylump}.
+
+% hs k k e
+
+\item If \judeh{\env}{\exphs{\varcsh}{\varexps}}{\vartyh} then $\vartyh = \tyunbrand{\varcsh}$, \judth{\env}{\tyunbrand{\varcsh}}, and \judes{\env}{\varexps}{\tytst}.
 
 % Scheme
 
-\item If $\Gamma\vdash_{S}\lambda x.e_{S}:TST$ then $\Gamma,x:TST\vdash_{S}e_{S}:TST$.
+% sh k e
 
-\item $\vdash_{S}\overline{n}:TST$.
+\item If \judes{\env}{\expsh{\varcsh}{\varexph}}{\tytst} then \judth{\env}{\tyunbrand{\varcsh}}, \judeh{\env}{\varexph}{\vartyh}, and $\tyunbrand{\varcsh} = \vartyh$.
 
-\item $\vdash_{S}\mathtt{nil}:TST$.
+% sm k e
 
-\item If $\Gamma\vdash_{S}\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2}:TST$ then $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $\Gamma\vdash_{S}e_{S}^{2}:TST$.
-
-\item If $\Gamma\vdash_{S}x:TST$ then $x:TST\in\Gamma$.
-
-\item If $\Gamma\vdash_{S}e_{S}^{1}$ $e_{S}^{2}:TST$ then $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $\Gamma\vdash_{S}e_{S}^{2}:TST$.
-
-\item If $\Gamma\vdash_{S}f$ $e_{S}:TST$ then $\Gamma\vdash_{S}e_{S}:TST$.
-
-\item If $\Gamma\vdash_{S}o$ $e_{S}^{1}$ $e_{S}^{2}:TST$ then $\Gamma\vdash_{S}e_{S}^{1}:TST$ and $\Gamma\vdash_{S}e_{S}^{2}:TST$.
-
-\item If $\Gamma\vdash_{S}p$ $e_{S}:TST$ then $\Gamma\vdash_{S}e_{S}:TST$.
-
-\item If $\Gamma\vdash_{S}\mathtt{if0}$ $e_{S}^{1}$ $e_{S}^{2}$ $e_{S}^{3}:TST$ then $\Gamma\vdash_{S}e_{S}^{1}:TST$, $\Gamma\vdash_{S}e_{S}^{2}:TST$, and $\Gamma\vdash_{S}e_{S}^{3}:TST$.
-
-\item $\vdash_{S}\mathtt{wrong}$ $\mathrm{string}:TST$.
-
-\item $\Gamma\vdash_{S}SA^{T_{1}}$ $e_{A}:TST$, $\Gamma\vdash_{A}T_{1}$, and $\Gamma\vdash_{A}e_{A}:T_{1}[T_{i}/T_{i}^{a}]$ where $A\in\lbrace H,M\rbrace$.
+\item If \judes{\env}{\expsm{\varcsm}{\varexpm}}{\tytst} then \judtm{\env}{\tyunbrand{\varcsm}}, \judem{\env}{\varexpm}{\vartym}, and $\tyunbrand{\varcsm} = \vartym$.
 
 \end{enumerate}
 
