Removed some lemma subsection titles. Added some lemma name macros. Revised the inversion and uniqueness of types lemmas to use the macros, some new wording. Next: canonical forms lemma.

--- a/macros.tex
+++ b/macros.tex
@@ -195,3 +195,13 @@
 \newcommand{\str}[1]{\ensuremath{\formstr{``#1"}}}
 \newcommand{\subst}[3]{\ensuremath{#1[#2/#3]}}
 \newcommand{\synlist}[1]{\ensuremath{\lbrace #1 \rbrace}}
+
+% Proof
+
+\newcommand{\proinv}{inversion lemma}
+\newcommand{\prouni}{uniqueness of types lemma}
+\newcommand{\procon}{canonical forms lemma}
+\newcommand{\profv}{forced value}
+\newcommand{\profvs}{\profv{}s\xspace}
+
+%\newcommand{\}{}
