--- a/proof/lemmas/progress/inversion.tex
+++ b/proof/lemmas/progress/inversion.tex
@@ -1,4 +1,6 @@
-\begin{lemma}
+Inverting the typing rules enables the syntactic forms of well-typed expressions to determine the types of their subexpressions.
+
+\begin{lemma}{Inversion of the Typing Relation}
 
 \label{leminv}
 
