--- a/proof/lemmas/progress/inversion.tex
+++ b/proof/lemmas/progress/inversion.tex
@@ -4,7 +4,7 @@ Inverting the typing rules enables the syntactic forms of well-typed expressions
 
 \label{leminv}
 
-The syntactic forms of well-typed expressions determine the types of their subexpressions.  ML cases are omitted because they mirror those of Haskell.  Straightforward Scheme cases are omitted; well-typed Scheme expressions and subexpressions have the type \tytst.
+The syntactic forms of well-typed expressions determine the types of their subexpressions.  ML cases are omitted because they mirror those of Haskell.  Straightforward Scheme cases are omitted because in those cases well-typed Scheme expressions and subexpressions have the type \tytst.
 
 \begin{enumerate}
 
